--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="grid_item">
             <a id="href">
-                <div id="qrcode" class="grid_item" style="margin-top:5px; align-items:center"></div>
+                <div id="qrcode" class="grid_item" style="margin-top:2em; align-items:center"></div>
             </a>
             <script type="text/javascript">
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
