--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <div class="grid_container">
         <div class="grid_item">
             <p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
-                There is no validation for phone numbers in this page.<br />
-                Validation will be done through your WhatsApp account.</p>
+                There is no validation for phone numbers on this page, so please make sure you have it right.<br />
+                Validation will be done through your WhatsApp account to deterine if it's a WhatsApp number.</p>
             <hr>
         </div>
         <div class="grid_item">
