--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
 <body>
     <div class="grid_container">
         <div class="grid_item">
-            <p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
-                There is no validation for phone numbers on this page, so please make sure you have it right.<br />
-                Validation will be done through your WhatsApp account to deterine if it's a WhatsApp number.</p>
+            <p style="text-align:center;">Include the country code (ie. +62) digits in the number with no spaces or symbols.<br />
+                WhatsApp will validate the number when you send the message.<br />
             <hr>
         </div>
         <div class="grid_item">
