--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
             font-size: 1em;
             width: 100%;
             text-align: center;
+            font-family: 'Barlow Condensed', sans-serif;
         }
 
         input {
             font-size: 1em;
             width: 100%;
             text-align: left;
+            font-family: 'Barlow Condensed', sans-serif;
         }
 
         /* Hide HTML5 Up and Down arrows. */
