--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
             <hr>
         </div>
         <div class="grid_item">
-            <input id="wAnumber" type="number" value="62" /><br />
+            <input id="wAnumber" type="number" value="62" />
+            <br>
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
-            <br />
+            <br>
             <input id="submit" type="submit" value="Submit" style="margin-top:1em"   />
         </div>
         <div class="grid_item">
