--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
 <body>
     <div class="grid_container">
         <div class="grid_item">
-            <p style="text-align:center;">Include the country code (ie. +62) digits in the number with no spaces or symbols.<br />
-                WhatsApp will validate the number when you send the message.<br />
+            <p style="text-align:center;">Include country code (ie. +62) digits only.<br />
+                WhatsApp validates number when message is sent.<br />
             <hr>
         </div>
         <div class="grid_item">
             <input id="wAnumber" type="number" value="62" />
             <br>
+        </div>
+        <div class="grid_item">    
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br>
