--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             grid-column-start: 2;
             grid-column-end: 12;
             align-items: center;
-            justify-self: center;
+            justify-self: stretch;
             text-align: center;
         }
 
