--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <input id="wAnumber" type="number" value="62" />
             <br>
         </div>
-        <div class="grid_item">    
+        <div class="grid_item" style="margin-top:1em">    
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br>
