--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br>
-            <input id="submit" type="submit" value="Submit" style="margin-top:1em"   />
+            <input id="wAupdate" type="submit" value="Update QR" style="margin-top:1em"   />
         </div>
         <div class="grid_item">
             <a id="href">
@@ -119,7 +119,16 @@
                     qrcode.makeCode(wurl);
                 }
                 makeCode();
-
+                $("#wAupdate").
+                    on("blur", function () {
+                        makeCode();
+                    }).
+                    on("keydown", function (e) {
+                        if (e.keyCode == 13) {
+                            makeCode();
+                        }
+                    });
+/*
                 $("#wAnumber").
                     on("blur", function () {
                         makeCode();
@@ -138,7 +147,7 @@
                         if (e.keyCode == 13) {
                             makeCode();
                         }
-                    });
+                    }); */
             </script>
         </div>
     </div>
