--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br>
-            <input id="wAupdate" type="submit" value="Update QR" style="margin-top:1em"   />
+            <button id="wAupdate" type="submit" value="Update QR" style="margin-top:1em"   />
         </div>
         <div class="grid_item">
             <a id="href">
