--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 }
                 makeCode();
 
-                $("#wAnumber").
+                $("#wAupdate").
                     on("blur", function () {
                         makeCode();
                     }).
@@ -129,7 +129,7 @@
                             makeCode();
                         }
                     });
-
+/*
                 $("#wAmessage").
                     on("blur", function () {
                         makeCode();
@@ -138,7 +138,7 @@
                         if (e.keyCode == 13) {
                             makeCode();
                         }
-                    });
+                    }); */
             </script>
         </div>
     </div>
