--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 }
                 makeCode();
 
-                $("#wAupdate").
+                $("#wAnumber").
                     on("blur", function () {
                         makeCode();
                     }).
