--- a/index.html
+++ b/index.html
@@ -152,6 +152,16 @@
                             makeCode();
                         }
                     });
+
+                $("#wAupdate").
+                    on("blur", function () {
+                        makeCode();
+                    }).
+                    on("keydown", function (e) {
+                        if (e.keyCode == 13) {
+                            makeCode();
+                        }
+                    });
             </script>
         </div>
     </div>
