--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
             <br>
         </div>
         <div class="grid_item" style="margin-top:1em">
-            <button onclick="makeCode()" style="margin-top:1em; color:red;">Click me</button>
-
-            <input id="wAupdate" type="submit" value="Update QR" style="margin-top:1em" />
+            <button onclick="makeCode()" style="margin-top:1em">Click me</button>
         </div>
         <div class="grid_item">
             <a id="href">
@@ -146,16 +144,6 @@
                     });
 
                 $("#wAmessage").
-                    on("blur", function () {
-                        makeCode();
-                    }).
-                    on("keydown", function (e) {
-                        if (e.keyCode == 13) {
-                            makeCode();
-                        }
-                    });
-
-                $("#wAupdate").
                     on("blur", function () {
                         makeCode();
                     }).
