--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@
             font-family: 'Barlow Condensed', sans-serif;
         }
 
-        input[type=submit] {
+        button {
             background-color: #4CAF50;
-            color: white;
+            color: rgb(0, 0, 0);
             padding: 12px 20px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            float: right;
         }
 
         /* Hide HTML5 Up and Down arrows. */
