--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <div class="grid_container">
         <div class="grid_item">
-            <p style="text-align:center;">Include country code (ie. +62) digits only.<br />
+            <p style="text-align:center;">Include country code (ie. +62) with phone number, digits only.<br />
                 WhatsApp validates number when message is sent.<br />
                 <hr>
         </div>
