--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         }
 
         button {
+            font-size: 1em;
             background-color: #4CAF50;
             color: rgb(0, 0, 0);
             padding: 1em 4em;
