--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         input {
             font-size: 1em;
-            width: 80%;
+            width: auto;
             text-align: left;
             font-family: 'Barlow Condensed', sans-serif;
         }
@@ -114,7 +114,7 @@
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
                     width: 25,
                     height: 25,
-                    useSVG: true,
+                    //useSVG: true,
                 });
 
 
