--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <button onclick="makeCode()" style="margin-top:1em">Update</button>
         </div>
         <div class="grid_item">
-            <div class="flex-container"><a id="href">
+            <div class="flex-content"><a id="href">
                     <div id="qrcode" class="grid_item" style="margin-top:1em; align-items:center"></div>
                 </a>
                 <script type="text/javascript">
