--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 <body>
     <div class="grid_container">
         <div class="grid_item">
-            <p style="text-align:center;">Include country code (ie. +62) with phone number, digits only.<br />
-                WhatsApp validates number when message is sent.<br />
+            <p style="text-align:center;">Include country code (ie. +62) with phone number, digits only.</p><br />
+                <br />
                 <hr>
         </div>
         <div class="grid_item">
