--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
 <body>
     <div class="grid_container">
         <div class="grid_item">
-            <p style="text-align:center;">Include country code (ie. +62) with phone number, digits only.</p><br />
-                <br />
+            <p style="text-align:center;">Include country code (ie. +62) with phone number, digits only.</p>
                 <hr>
         </div>
         <div class="grid_item">
