--- a/index.html
+++ b/index.html
@@ -93,17 +93,16 @@
     <div class="grid_container">
         <div class="grid_item">
             <p style="text-align:center;">Include country code (ie. +62) with phone number, digits only.</p>
-                <hr>
+            <hr>
         </div>
         <div class="grid_item">
             <input id="wAnumber" type="number" value="62" />
             <br>
         </div>
         <div class="grid_item" style="margin-top:1em">
-
             <textarea id="wAmessage" rows="6">Input your WhatsApp message here.</textarea>
         </div>
-        <div class="grid_item" style="margin-top:1em">
+        <div class="grid_item" style="margin-top:.2em">
             <button onclick="makeCode()" style="margin-top:1em">Update</button>
         </div>
         <div class="grid_item">
