messing with grid

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .grid_container {
             display: grid;
             grid-template-columns: repeat(12, 1fr);
-            grid-template-rows: auto;
+            grid-template-rows: auto, auto, 1vh;
             align-items: center;
             justify-items: center;
         }
