--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .grid_container {
             display: grid;
             grid-template-columns: repeat(12, 1fr);
-            grid-template-rows: auto, auto, 1vh;
+            grid-template-rows: auto, auto, .5vh;
             align-items: center;
             justify-items: center;
         }
@@ -100,7 +100,7 @@
         </div>
         <div class="grid_item" style="margin-top:1em">
 
-            <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
+            <textarea id="wAmessage" rows="4">Input your WhatsApp message here.</textarea>
             <br>
         </div>
         <div class="grid_item" style="margin-top:1em">
