--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .grid_container {
             display: grid;
             grid-template-columns: repeat(12, 1fr);
-            grid-template-rows: auto, auto, .5vh;
+            grid-template-rows: auto;
             align-items: center;
             justify-items: center;
         }
@@ -28,6 +28,7 @@
             align-items: center;
             justify-self: stretch;
             text-align: center;
+            max-width: 100px;
         }
 
         .flex-container {
