--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             align-items: center;
             justify-self: stretch;
             text-align: center;
-            max-width: 100px;
         }
 
         .flex-container {
@@ -107,7 +106,7 @@
         <div class="grid_item" style="margin-top:1em">
             <button onclick="makeCode()" style="margin-top:1em">Update</button>
         </div>
-        <div class="grid_item">
+        <div class="grid_item" style="max-height: 100px;">
             <a id="href">
                 <div id="qrcode" class="grid_item" style="margin-top:1em; align-items:center"></div>
             </a>
