--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class="grid_item">
             <a id="href">
-                <div id="qrcode" class="grid_item" style="margin-top:1em; align-items:center; max-width: 100px;"></div>
+                <div id="qrcode" class="grid_item" style="margin-top:1em; align-items:center; "></div>
             </a>
             <script type="text/javascript">
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
