--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         }
 
         .grid_item {
-            grid-column-start: 5;
-            grid-column-end: 8;
+            grid-column-start: 3;
+            grid-column-end: 10;
             align-items: center;
             justify-self: stretch;
             text-align: center;
@@ -106,7 +106,7 @@
         <div class="grid_item" style="margin-top:1em">
             <button onclick="makeCode()" style="margin-top:1em">Update</button>
         </div>
-        <div class="grid_item">
+        <div class="grid_item" style="grid-column-start: 5; grid-column-end: 8;>
             <a id="href">
                 <div id="qrcode" class="grid_item" style="margin-top:1em; align-items:center; "></div>
             </a>
