--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="grid_item" style="margin-top:1em">
             <button onclick="makeCode()" style="margin-top:1em">Update</button>
         </div>
-        <div class="grid_item" style="grid-column-start: 5; grid-column-end: 8;>
+        <div class="grid_item" style="grid-column-start: 5; grid-column-end: 8;">
             <a id="href">
                 <div id="qrcode" class="grid_item" style="margin-top:1em; align-items:center; "></div>
             </a>
