--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         align-items: center;
         justify-items: center;
       }
+      
+      .grid_menu {
+        grid-column-start: 2;
+        grid-column-end: 11;
+        align-items: center;
+        justify-self: stretch;
+        text-align: center;
+      }      
 
       .grid_item {
         grid-column-start: 3;
@@ -88,6 +96,10 @@
 
   <body>
     <div class="grid_container">
+      <div class="grid_menu">
+        <a href="https://waqrcode.netlify.app/urlonly">URL Only Page</a>
+        </div>
+
       <div class="grid_item">
         <p style="text-align: center">
           Include country code (ie. +62) with phone number, digits only.<br />
