--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
       .grid_menu {
         grid-column-start: 2;
         grid-column-end: 11;
-        align-items: center;
-        justify-self: stretch;
-        text-align: center;
+        font-size: .8em;
       }      
 
       .grid_item {
