--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       .grid_menu {
         grid-column-start: 2;
         grid-column-end: 11;
-        font-size: .8em;
+        font-size: .5em;
+        text-align: left;
+        align-items: left;
       }      
 
       .grid_item {
