--- a/URLOnly.html
+++ b/URLOnly.html
@@ -20,6 +20,14 @@
         align-items: center;
         justify-items: center;
       }
+	
+      .grid_menu {
+        grid-column-start: 2;
+        grid-column-end: 4;
+        font-size: .5em;
+        text-align: left;
+        align-items: left;
+      }  
 
       .grid_item {
         grid-column-start: 3;
@@ -86,7 +94,11 @@
     </style>
 </head>
 <body>
-
+	<div class="grid_container">
+      <div class="grid_menu">
+        <a href="https://waqrcode.netlify.app/">WAQR Page</a>
+        </div>
+        </div>
 
 <div class="flex-container">
 <p style="text-align:center;">Paste the url in the box and hit enter.</p>
