--- a/URLOnly.html
+++ b/URLOnly.html
@@ -88,7 +88,7 @@
         margin: 0;
       }
 
-      input[type="number"] {
+      input[type="number" placeholder="Replace this text with your text."] {
         -moz-appearance: textfield;
       }
     </style>
@@ -105,7 +105,7 @@
 <hr>
 
 <textarea id="urlText" rows="10">
-Replace this text with your text.
+
 </textarea>
 <br />
 <a id="href">
